<resources>
    <string name="app_name">Gestor Restaurante</string>
    <string name="add_product_user_id_label">ID:</string>
    <string name="add_product_user_name_label">Nombre:</string>
    <string name="add_product_user_price_label">Precio:</string>
    <string name="add_product_user_add_button">Añadir</string>
    <string name="add_product_user_id_hint">ID</string>
    <string name="add_product_user_name_hint">Nombre</string>
    <string name="add_product_user_price_hint">Precio</string>
    <string name="detalle_pedido_activity_id_label">ID del producto:</string>
    <string name="detalle_pedido_activity_name_label">Nombre del producto:</string>
    <string name="detalle_pedido_activity_total_price_label">Precio total:</string>
    <string name="detalle_pedido_activity_total_product_label">Cantidad total de productos:</string>
    <string name="detalle_pedido_activity_delete_button">Eliminar</string>
    <string name="detalle_pedido_activity_id_hint">ID del producto</string>
    <string name="detalle_pedido_activity_name_hint">Nombre del producto</string>
    <string name="detalle_pedido_activity_total_price_hint">Precio total</string>
    <string name="detalle_pedido_activity_total_product_hint">Cantidad total de productos</string>
    <string name="admin_id_producto_cv">ID producto</string>
    <string name="admin_nombre_producto_cv">nombre producto</string>
    <string name="admin_precio_producto_cv">precio producto</string>
    <string name="lb_user_history_pendientes">Pendientes</string>
    <string name="lb_user_history_aceptados">Aceptados</string>
    <string name="lb_user_history_rechazados">Rechazados</string>
    <string name="label_id_editProducto_admin">ID Producto</string>
    <string name="id_editProducto_admin_hint">ID producto</string>
    <string name="label_nombre_editProducto_admin">Nombre producto</string>
    <string name="nombre_editProducto_admin_hint">Nombre Producto</string>
    <string name="label_precio_editProducto_admin">Precio producto</string>
    <string name="precio_editProducto_admin_hint">Precio Producto</string>
    <string name="label_descripcion_editProducto_admin">Descripcion</string>
    <string name="descripcion_editProducto_admin_hint">Descripcion del producto</string>
    <string name="btnCancelar_editProducto_admin">Cancelar</string>
    <string name="btnGuardar_editProducto_admin">Guardar</string>
    <string name="usuario_hint">Usuario</string>
    <string name="contrasenya_hint">Contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="signup_button">Registrarse</string>
    <string name="signup_text">Registrarse</string>
    <string name="signupWorker_text">Registrar Trabajador</string>
    <string name="usuario_signup_hint">Usuario</string>
    <string name="contrasenya_signup_hint">Contraseña</string>
    <string name="register_button">Registrar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="barraBusqueda">Buscar</string>
    <string name="volver_button_user_carrito">Volver</string>
    <string name="realizar_pedido_button">Realizar Pedido</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="admin_create_worker">Registrar Trabajador</string>
    <string name ="menu_about_tfg">Acerca de tfg</string>
    <string name="menu_user_historial_pedido">Historial Pedido</string>
    <string name="btn_user_carrito">Carrito</string>
    <string name="btn_admin_productos">Productos</string>
    <string name="btn_admin_pedidos">Pedidos</string>
    <string name="check_box_text">Recordar usuario</string>
    <string name="txt_TFG">Este proyecto es un Trabajo de Fin de Grado (TFG) desarrollado para el curso de Desarrollo de Aplicaciones Multiplataforma (DAM). La aplicación está diseñada para gestionar un único restaurante, utilizando una API REST implementada con Spring Boot y una aplicación móvil para Android, ambos desarrollados en Java. El objetivo es proporcionar una solución eficiente y práctica para la administración de pedidos y gestión de usuarios en un entorno real.</string>
    <string name="toast_adminCreateWorker_complete_fields">Complete todos los campos</string>
    <string name="toast_adminCreateWorker_register_success">Usuario registrado exitosamente</string>
    <string name="toast_adminCreateWorker_register_error">Error al registrar usuario: </string>
    <string name="toast_adminEditProduct_updateProduct_succes">Producto actualizado con exito</string>
    <string name="toast_adminEditProduct_updateProduct_error">Error al actualizar el producto: </string>
    <string name="toast_adminEditProduct_uploadProduct_error">Error al cargar el producto: </string>
    <string name="toast_adminPedidos_uploadOrder_error">Error al cargar el pedido: </string>
    <string name="toast_adminPedidos_uploadStatus_error">Error al actualizar el estado del pedido</string>
    <string name="toast_adminProductos_ProductDeleted_succes">Producto eliminado</string>
    <string name="toast_adminProductos_ProductDelete_error">Error al eliminar producto: </string>
    <string name="toast_adminProductos_ProductNotDeleted">Producto no eliminado</string>
    <string name="toast_adminProductos_UploadProductos_error">Error al obtener productos: </string>
    <string name="toast_adminProductos_createProduct_succes">Producto creado con exito</string>
    <string name="toast_adminProductos_createProduct_error">Error al crear producto: </string>
    <string name="dialog_title_delete_product">Eliminar producto seleccionado</string>
    <string name="dialog_message_confirm_delete">¿Estás seguro de eliminar el producto?</string>
    <string name="dialog_button_yes">Sí</string>
    <string name="toast_product_deleted_success">Producto eliminado con éxito</string>
    <string name="toast_product_delete_error">Error al eliminar producto: </string>
    <string name="dialog_button_no">No</string>




</resources>