<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productoAdminCV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbIdProductoCV"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/admin_id_producto_cv" />

        <TextView
            android:id="@+id/txtIdProductoCV"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/lbIdProductoCV"
            android:text="@string/admin_id_producto_cv" />

        <TextView
            android:id="@+id/lbNombrePRoductoCV"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/admin_nombre_producto_cv" />

        <TextView
            android:id="@+id/txtNombreProductoCV"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="45dp"
            android:layout_toRightOf="@id/lbNombrePRoductoCV"
            android:text="@string/admin_nombre_producto_cv" />

        <TextView
            android:id="@+id/lbPrecioProductoCV"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/admin_precio_producto_cv" />

        <TextView
            android:id="@+id/txtPrecioProductoCV"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="90dp"
            android:layout_toRightOf="@id/lbPrecioProductoCV"
            android:text="@string/admin_precio_producto_cv" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
